07-EKS-Workloads-on-Fargate/07-02-Fargate-profiles-Advanced-YAML/kube-manifests/02-Applications/03-ns-ums/02-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    runon: fargate
  namespace: ns-ums
spec:
  type: ExternalName
  externalName: usermgmtdb.cxojydmxwly6.us-east-1.rds.amazonaws.com
